unpackaged/main/default/objects/Invoice/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <label>Document Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>