unpackaged/main/default/objects/Invoice/fields/Invoice_Timezone_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Timezone_Date__c</fullName>
    <label>Invoice Timezone Date</label>
    <type>Date</type>
</CustomField>