unpackaged/main/default/objects/Invoice/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>