unpackaged/main/default/objects/Invoice/fields/Is_Anonymized_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Anonymized_Account__c</fullName>
    <formula>BillingAccount.isPurged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Anonymized Account</label>
    <type>Checkbox</type>
</CustomField>