unpackaged/main/default/objects/Invoice/fields/isCorrectiveInvoiceElligible__c.field-meta.xml
<CustomField>
    <fullName>isCorrectiveInvoiceElligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Corrective Invoice Elligible</label>
    <type>Checkbox</type>
</CustomField>