unpackaged/main/default/objects/Invoice/fields/sentToFTP__c.field-meta.xml
<CustomField>
    <fullName>sentToFTP__c</fullName>
    <label>Sent to FTP</label>
    <type>DateTime</type>
    
</CustomField>